NSCrossWebsiteTrackingUsageDescription is not working on Mac, ITP is always enabled https://bugs.webkit.org/show_bug.cgi?id=220190 <rdar://problem/72744909>

Reviewed by Brent Fulgham.

Source/WebKit:

Consider the presence of the NSCrossWebsiteTrackingUsageDescription
key as an indication to disable ITP for WKWebView until we implement
a mechanism for disabling it in WKWebView like we do for iOS to avoid
compatibility bugs.

* Shared/Cocoa/DefaultWebBrowserChecks.mm:
(WebKit::determineITPStateInternal):

Source/WTF:

* wtf/PlatformUse.h:


Canonical link: https://commits.webkit.org/232788@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271192 268f45cc-cd09-0410-ab3c-d52691b4dbfc